2005-04-15  Corinna Vinschen  <vinschen@redhat.com>

	* configure.ac: New file.
	* configure.in: Remove.
	* configure: Regenerate.
	* defs-media.h (sem_fields): Add missing sfmt_ldhil member.
	* sim-if.c (sim_open): Use struct bfd instead of struct _bfd.
	(sim_create_inferior): Ditto.

2004-12-08  Hans-Peter Nilsson  <hp@axis.com>

	* configure: Regenerate for ../common/aclocal.m4 update.

Fri Feb 21 19:49:45 2003  J"orn Rennecke <joern.rennecke@superh.com>

	* sem-media-switch.c, sem-media.c: Regenerate.

2002-06-24  Richard Sandiford  <rsandifo@redhat.com>

        * sh64.c: Update path of "callback.h".

2002-06-20  Elena Zannoni  <ezannoni@redhat.com>

        * sh64.c: Include correct file for register numbers.

Fri May 17 14:27:41 2002  J"orn Rennecke <joern.rennecke@superh.com>

	* sim-if.c (sh64_disassemble_insn): Use  print_insn_sh instead of
	print_insn_shl.

2001-07-05  Ben Elliston  <bje@redhat.com>

	* Makefile.in (stamp-arch): Use $(CGEN_CPU_DIR).
	(stamp-desc): Likewise.
	(stamp-cpu): Likewise.
	(stamp-defs-compact): Likewise.
	(stamp-defs-media): Likewise.
	(stamp-decode-compact): Likewise.
	(stamp-decode-media): Likewise.

2001-03-30  Ben Elliston  <bje@redhat.com>

	* sim-if.c (sim_open): Set sh64_idesc_{media,compact} to NULL.
	* sh64-sim.h (sh64_idesc_{compact,media}): Declare extern.
	* sh64.c (sh64_idesc_{compact,media}): Make non-static.

2001-01-30  Ben Elliston  <bje@redhat.com>

	* sh64.c (SYS_argc, SYS_argn, SYS_argnlen): Define.
	(trap_handler): Implement these syscalls.
	(count_argc): New function.

2001-01-24  Alexandre Oliva  <aoliva@redhat.com>

	* sh64.c (trap_handler): Implement time.

	* sh64.c (fetch_str): New function.
	(trap_handler): Re-implement write, and implement lseek, read,
	open and close.

2001-01-18  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* sh64.c (sh64_fetch_register): When fetching the PC, return the
 	PC value and set the LSB according to the current ISA.

2001-01-18  Ben Elliston  <bje@redhat.com>
